[package]
name = "cargo-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cargo-manifest = "0.19.1"
cargo_metadata = "0.19.1"
clap = { version = "4.5.26", features = ["derive"] }
git2 = "0.20.0"
glob = "0.3.2"
regex = "1.11.1"
semver = "1.0.24"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
